--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
+    <div class="container">
    <h1>Jewerly store</h1> 
+    </div>
 </body>
 </html>
