[+] posicionar el footer en la parte inferior de manera estatica

--- a/index.html
+++ b/index.html
@@ -8,8 +8,20 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    <div class="container">
-   <h1>Jewerly store</h1> 
-    </div>
+    <header class="header">
+        <div class="container">
+            <h1 class="header_tittle">Header</h1>
+        </div>        
+    </header>
+    <main class="main">
+        <div class="container">
+            <h2 class="main_tittle">Main</h2>
+        </div>
+    </main>
+    <footer class="footer">
+        <div class="container">
+            <h2 class="footer_title">Footer</h2>
+        </div>
+    </footer>
 </body>
 </html>
