[+] html: se agrego el menu, titulo. css: se arreglaron espacios y estilos

--- a/index.html
+++ b/index.html
@@ -6,11 +6,28 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
     <header class="header">
         <div class="container">
-            <h1 class="header_tittle">Header</h1>
+
+            <div class="header-top">
+                <div class="header-top-left">SEARCH</div>
+                <div class="header-top-logo"><h1 class="header_tittle">jewerly store</h1></div>
+                <div class="header-top-right">r</div>
+            </div>
+             <nav class="menu-nav nav-navbar">
+                <div class="site-logo">
+
+                </div>
+                <ul class="menu-main">
+                    <li class="menu__item"><a href="#" class="menu__link btn active">Rings</a></li>
+                    <li class="menu__item"><a href="#" class="menu__link btn">Earrings</a></li>
+                    <li class="menu__item"><a href="#" class="menu__link btn">Bracelets</a></li>
+                    <li class="menu__item"><a href="#" class="menu__link btn">Necklaces</a></li>                    
+                </ul>               
+            </nav>
         </div>        
     </header>
     <main class="main">
