adelante gran parte del footer, secciones de contacto, redes sociales

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,11 +8,12 @@
 
     <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
     <header class="header">
         <div class="container">
             <h1 class="header_tittle">Header</h1>
-        </div>        
+        </div>
     </header>
     <main class="main">
         <div class="container">
@@ -19,9 +21,40 @@
         </div>
     </main>
     <footer class="footer">
-        <div class="container">
-            <h2 class="footer_title">Footer</h2>
-        </div>
-    </footer>
+        <div class="footer_container footer_container--top">
+            <div class="container container-footer container-contact">
+                <h2 class="contact_tittle">Contact</h2>
+                <div class="horario">
+                    <p>Working hours Mon-Fri 10-18h CET</p><p>+57 3213347232</p>
+                </div>    
+            </div>
+            <div class="container container-footer container-correo">
+                <h2 class="contact_tittle">Contact</h2>
+                <div class="texto">
+                    <p>¿Qué hay dentro? Ventas exclusivas, novedades y mucho más.</p>
+                </div>
+                <div class="correo">
+                    <img src="./images/correo.png" alt="correo">
+                    <div class="btn-registro">
+                        <a href="#">registrate</a>
+                    </div>
+                    <p>* Acepto la política de privacidad y cookies para recibir </p>
+                </div>    
+            </div>
+            <div class="container container-footer container-redes-sociales">
+                <h2 class="contact_tittle">Redes Sociales</h2>
+                <div class="container container-redes-sociales-images">
+                    <a href="#"><img class="redes-sociales-images facebook-image"  src="./images/facebook-logo.png" alt="facebook"></a>
+                    <a href="#"><img class="redes-sociales-images instagram" src="./images/instagram-logo.png" alt="instagram"></a>
+                    <a href="#"><img class="redes-sociales-images github-image" src="./images/github-logo.png" alt="github"></a>
+                    <a href="#"><img class="redes-sociales-images youtube-image" src="./images/youtube-logo.png" alt="youtube"></a>
+                
+                </div>    
+            </div>
+            <div class="footer_container footer_container--bottom">
+                alo
+            </div>
+        </footer>
 </body>
+
 </html>
