--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
         <div class="container">
 
             <div class="header-top">
-                <div class="header-top-left">SEARCH</div>
+                <div class="header-top-left">SEARCH
+                    <a href="index.html">
+                        <img src="./images/busqueda1.png" alt="busqueda.png">
+                    </a>
+                </div>
                 <div class="header-top-logo"><h1 class="header_tittle">jewerly store</h1></div>
-                <div class="header-top-right">r</div>
+                <div class="header-top-right">USD</div>
             </div>
              <nav class="menu-nav nav-navbar">
                 <div class="site-logo">
