maquetacion del footer al 100%

--- a/index.html
+++ b/index.html
@@ -20,41 +20,92 @@
             <h2 class="main_tittle">Main</h2>
         </div>
     </main>
-    <footer class="footer">
-        <div class="footer_container footer_container--top">
-            <div class="container container-footer container-contact">
-                <h2 class="contact_tittle">Contact</h2>
-                <div class="horario">
-                    <p>Working hours Mon-Fri 10-18h CET</p><p>+57 3213347232</p>
-                </div>    
-            </div>
-            <div class="container container-footer container-correo">
-                <h2 class="contact_tittle">Contact</h2>
-                <div class="texto">
-                    <p>¿Qué hay dentro? Ventas exclusivas, novedades y mucho más.</p>
-                </div>
-                <div class="correo">
-                    <img src="./images/correo.png" alt="correo">
-                    <div class="btn-registro">
-                        <a href="#">registrate</a>
+    <footer class="footer*">
+        <section class="footer">
+            <div class="footer_container footer_container--top">
+                <div class="container container-footer container-contact">
+                    <h2 class="contact_tittle">Contacto</h2>
+                    <div class="horario">
+                        <small>Horario de trabajo de lunes a viernes de 8 a 18 h UTC-5</small>
+                        <br />
+                        <a rel="noreferrer noopener" href="tel:+57 3213347232" data-type="tel" data-id="tel:123456789"
+                            target="_blank">+57 3213347232</a>
+                        <!--  <br/> => es para poner un "punto aparte" -->
                     </div>
-                    <p>* Acepto la política de privacidad y cookies para recibir </p>
-                </div>    
+                </div>
+                <div class="container container-footer container-correo">
+                    <h2 class="contact_tittle">¡Pongámonos en contacto!</h2>
+                    <div class="texto">
+                        <p>¿Qué hay dentro? Ventas exclusivas, novedades y mucho más.</p>
+                    </div>
+                    <form class="email-input" action="/registrar" method="POST">
+                        <input type="email" placeholder="Tu correo"> <!-- placehorder => texto "predeterminado"-->
+                        <button type="submit">Registrate</button>
+                    </form>
+
+                    <small>* Acepto la política de privacidad y cookies para recibir </small>
+                </div>
+                <div class="container container-footer container-redes-sociales">
+                    <h2 class="contact_tittle">Redes Sociales</h2>
+                    <div class="container container-redes-sociales-images">
+                        <a href="#"><img class="redes-sociales-images facebook-image" src="./images/facebook-logo.png"
+                                alt="facebook"></a>
+                        <a href="#"><img class="redes-sociales-images instagram" src="./images/instagram-logo.png"
+                                alt="instagram"></a>
+                        <a href="#"><img class="redes-sociales-images github-image" src="./images/github-logo.png"
+                                alt="github"></a>
+                        <a href="#"><img class="redes-sociales-images youtube-image" src="./images/youtube-logo.png"
+                                alt="youtube"></a>
+
+                    </div>
+                </div>
+        </section>
+        <div class="container footer_container footer_container--bottom">
+            <div class="footer_container superior">
+                <h2>Joyería Ascella</h2>
+                <img class="metodo_de_pago" src="./images/metodos-de-pago.png" alt="metodos de pago">
+                <div class="general">
+                    <h3>General</h3>
+                    <ul>
+                        <!-- li.menu_item*6>a.menu__link == PARA GENERAD VARIOS <li> CON SUS CLASES Y ELEMTNOS DE GOLPE-->
+                        <li class="menu_item"><a href="#" class="menu__link"></a>Envío</li>
+                        <li class="menu_item"><a href="#" class="menu__link"></a>Estado del pedido</li>
+                        <li class="menu_item"><a href="#" class="menu__link"></a>Intercambios y devoluciones</li>
+                        <li class="menu_item"><a href="#" class="menu__link"></a>Guía de tallas</li>
+                        <li class="menu_item"><a href="#" class="menu__link"></a>Cuidado de las joyas</li>
+                        <li class="menu_item"><a href="#" class="menu__link"></a>Preguntas frecuentes</li>
+                        <!-- Ctrl + Alt + ↓ para agregar cursores y escribir varias a la vez -->
+                    </ul>
+                </div>
+                <div class="acerca_de">
+                    <h3>Acerca de</h3>
+                    <ul>
+                        <li class="menu_item"><a href="#" class="menu__link"></a>Nuestro mundo</li>
+                        <li class="menu_item"><a href="#" class="menu__link"></a>Nuestro embalaje</li>
+                        <li class="menu_item"><a href="#" class="menu__link"></a>Nuestro Cliente</li>
+                        <li class="menu_item"><a href="#" class="menu__link"></a>Historias</li>
+                        <li class="menu_item"><a href="#" class="menu__link"></a>Tarjetas de regalo</li>
+                    </ul>
+                </div>
+                <div class="categorias">
+                    <h3>Categorias</h3>
+                    <ul>
+                        <li class="menu_item"><a href="#" class="menu__link"></a>Nuevo en</li>
+                        <li class="menu_item"><a href="#" class="menu__link"></a>Pendientes</li>
+                        <li class="menu_item"><a href="#" class="menu__link"></a>Anillos</li>
+                        <li class="menu_item"><a href="#" class="menu__link"></a>Collar</li>
+                        <li class="menu_item"><a href="#" class="menu__link"></a>Pulseras</li>
+                        <li class="menu_item"><a href="#" class="menu__link"></a>Accesorios</li>
+                        <li class="menu_item"><a href="#" class="menu__link"></a>Todas las joyas</li>
+                    </ul>
+                </div>
             </div>
-            <div class="container container-footer container-redes-sociales">
-                <h2 class="contact_tittle">Redes Sociales</h2>
-                <div class="container container-redes-sociales-images">
-                    <a href="#"><img class="redes-sociales-images facebook-image"  src="./images/facebook-logo.png" alt="facebook"></a>
-                    <a href="#"><img class="redes-sociales-images instagram" src="./images/instagram-logo.png" alt="instagram"></a>
-                    <a href="#"><img class="redes-sociales-images github-image" src="./images/github-logo.png" alt="github"></a>
-                    <a href="#"><img class="redes-sociales-images youtube-image" src="./images/youtube-logo.png" alt="youtube"></a>
-                
-                </div>    
-            </div>
-            <div class="footer_container footer_container--bottom">
-                alo
-            </div>
-        </footer>
+        </div>
+        <div class="container footer_container footer_container--bottom inferior">
+            <p>© 2025 alo Todos los derechos reservados</p>
+        </div>
+
+    </footer>
 </body>
 
 </html>
