css: se arreglaron posiciones, html: se agregaron imagenes

--- a/index.html
+++ b/index.html
@@ -19,7 +19,17 @@
                     </a>
                 </div>
                 <div class="header-top-logo"><h1 class="header_tittle">jewerly store</h1></div>
-                <div class="header-top-right">USD</div>
+                <div class="header-top-right"> USD    
+                     <a href="index.html">
+                        <img src="./images/usuario.png" alt="usuario.png">
+                    </a>
+                     <a href="index.html">
+                        <img src="./images/wishlist.png" alt="wishlist.png">
+                    </a>
+                     <a href="index.html">
+                        <img src="./images/cartbag.png" alt="cartbag.png">
+                    </a>
+                </div>
             </div>
              <nav class="menu-nav nav-navbar">
                 <div class="site-logo">
