[+] html: se agregaron estilos de iconos. css: [+] nuevas dimensiones y nuevo orden en el menu

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/main.css">
 </head>
@@ -13,35 +13,27 @@
         <div class="container">
 
             <div class="header-top">
-                <div class="header-top-left">SEARCH
-                    <a href="index.html">
-                        <img src="./images/busqueda1.png" alt="busqueda.png">
-                    </a>
+                <div class="header-top-left">
+                <i class="fa-solid fa-magnifying-glass"></i>
                 </div>
                 <div class="header-top-logo"><h1 class="header_tittle">jewerly store</h1></div>
-                <div class="header-top-right"> USD    
-                     <a href="index.html">
-                        <img src="./images/usuario.png" alt="usuario.png">
-                    </a>
-                     <a href="index.html">
-                        <img src="./images/wishlist.png" alt="wishlist.png">
-                    </a>
-                     <a href="index.html">
-                        <img src="./images/cartbag.png" alt="cartbag.png">
-                    </a>
+                <div class="header-top-right">    
+                     <i class="fa-solid fa-user desktop"></i>
+                     <i class="fa-solid fa-heart desktop"></i>
+                     <i class="fa-solid fa-cart-shopping desktop"></i>
+                     <i class="fa-solid fa-bars mobile"></i>
                 </div>
             </div>
              <nav class="menu-nav nav-navbar">
-                <div class="site-logo">
 
-                </div>
                 <ul class="menu-main">
-                    <li class="menu__item"><a href="#" class="menu__link btn active">Rings</a></li>
-                    <li class="menu__item"><a href="#" class="menu__link btn">Earrings</a></li>
-                    <li class="menu__item"><a href="#" class="menu__link btn">Bracelets</a></li>
-                    <li class="menu__item"><a href="#" class="menu__link btn">Necklaces</a></li>                    
+                    <a href="#" class="menu__link">Rings</a>
+                    <a href="#" class="menu__link">Earrings</a>
+                    <a href="#" class="menu__link">Bracelets</a>
+                    <a href="#" class="menu__link">Necklaces</a>                    
                 </ul>               
             </nav>
+            
         </div>        
     </header>
     <main class="main">
