PORFIN CENTRE ESOS MENU

--- a/index.html
+++ b/index.html
@@ -15,15 +15,19 @@
             <h1 class="header_tittle">Header</h1>
         </div>
     </header>
-    <main class="main">
+    <main class="main raya">
         <div class="container">
-            <h2 class="main_tittle">Main</h2>
+            <div class="main-container modelos-container">aun no</div>
+            <div class="main-container collares-container">aun no</div>
+            <div class="main-container anillos-container">aun no</div>
+            <div class="main-container aretes-container"></div>
+            <div class="main-container pulseras-container"></div>
         </div>
     </main>
     <footer class="footer*">
         <section class="footer">
             <div class="footer_container footer_container--top">
-                <div class="container container-footer container-contact">
+                <div class="raya container container-footer container-contact">
                     <h2 class="contact_tittle">Contacto</h2>
                     <div class="horario">
                         <small>Horario de trabajo de lunes a viernes de 8 a 18 h UTC-5</small>
@@ -45,7 +49,7 @@
 
                     <small>* Acepto la política de privacidad y cookies para recibir </small>
                 </div>
-                <div class="container container-footer container-redes-sociales">
+                <div class="raya container container-footer container-redes-sociales">
                     <h2 class="contact_tittle">Redes Sociales</h2>
                     <div class="container container-redes-sociales-images">
                         <a href="#"><img class="redes-sociales-images facebook-image" src="./images/facebook-logo.png"
@@ -59,12 +63,18 @@
 
                     </div>
                 </div>
-        </section>
+            </div>
+            </section>
         <div class="container footer_container footer_container--bottom">
             <div class="footer_container superior">
-                <h2>Joyería Ascella</h2>
-                <img class="metodo_de_pago" src="./images/metodos-de-pago.png" alt="metodos de pago">
-                <div class="general">
+                <div class="detalles footer_container">
+                    <div class="desktop pago">
+
+                        <h2>Joyería Ascella</h2>
+                        <img class="metodo_de_pago desktop" src="./images/metodos-de-pago.png" alt="metodos de pago">
+                    </div>
+                    
+                <div class="general desktop desktop-menu">
                     <h3>General</h3>
                     <ul>
                         <!-- li.menu_item*6>a.menu__link == PARA GENERAD VARIOS <li> CON SUS CLASES Y ELEMTNOS DE GOLPE-->
@@ -77,7 +87,7 @@
                         <!-- Ctrl + Alt + ↓ para agregar cursores y escribir varias a la vez -->
                     </ul>
                 </div>
-                <div class="acerca_de">
+                <div class="acerca_de desktop desktop-menu">
                     <h3>Acerca de</h3>
                     <ul>
                         <li class="menu_item"><a href="#" class="menu__link"></a>Nuestro mundo</li>
@@ -87,7 +97,7 @@
                         <li class="menu_item"><a href="#" class="menu__link"></a>Tarjetas de regalo</li>
                     </ul>
                 </div>
-                <div class="categorias">
+                <div class="categorias desktop desktop-menu">
                     <h3>Categorias</h3>
                     <ul>
                         <li class="menu_item"><a href="#" class="menu__link"></a>Nuevo en</li>
@@ -99,10 +109,12 @@
                         <li class="menu_item"><a href="#" class="menu__link"></a>Todas las joyas</li>
                     </ul>
                 </div>
+                </div>
             </div>
         </div>
         <div class="container footer_container footer_container--bottom inferior">
             <p>© 2025 alo Todos los derechos reservados</p>
+            <p>jewerly_store@prospecto.com</p>
         </div>
 
     </footer>
